--- a/MCP.Desktop/MCP.Desktop.csproj
+++ b/MCP.Desktop/MCP.Desktop.csproj
@@ -7,4 +7,17 @@
     <ProjectReference Include="..\MCP\MCP.csproj" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.11" />
   </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaXaml Update="App.axaml">
+      <SubType>Designer</SubType>
+    </AvaloniaXaml>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="App.axaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
