--- a/MCP.Desktop.Linux/MCP.Desktop.Linux.csproj
+++ b/MCP.Desktop.Linux/MCP.Desktop.Linux.csproj
@@ -6,4 +6,17 @@
   <ItemGroup>
     <ProjectReference Include="..\MCP.Desktop\MCP.Desktop.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <AvaloniaXaml Update="App.axaml">
+      <SubType>Designer</SubType>
+    </AvaloniaXaml>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Update="App.axaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
