--- a/MCP.Desktop.MacOS/MCP.Desktop.MacOS.csproj
+++ b/MCP.Desktop.MacOS/MCP.Desktop.MacOS.csproj
@@ -6,4 +6,10 @@
   <ItemGroup>
     <ProjectReference Include="..\MCP.Desktop\MCP.Desktop.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Update="App.axaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
